end of zoom session 9/24

--- a/Buoy-Report.Rmd
+++ b/Buoy-Report.Rmd
@@ -8,14 +8,18 @@ output: pdf_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+## Introduction
+
+The National Oceanic and Atmospheric Administration (NOAA) studies the sky and the ocean to preserve our planet. Their mission is “to understand and predict changes in climate, weather, oceans, and coasts, to share that knowledge and information with others, and to conserve and manage coastal and marine ecosystems and resources.” NOAA’s vision of the future is to protect resilient and healthy ecosystems, communities, and economies in the face of change.
 
 ## Research Question
 
-  The purpose of this project is to investigate evidence of global warming from weather buoy data. Meteorological data has been collected from [NOAA National Data Buoy Center Station 44013](https://www.ndbc.noaa.gov/station_history.php?station=44013), which is located about 11 miles offshore from Boston, MA. The specific question being asked is as follows: Can data from a single weather buoy provide evidence to support the conclusion that global warming is a real phenomenon?
+The purpose of this project is to investigate evidence of global warming from weather buoy data. Meteorological data has been collected from [NOAA National Data Buoy Center Station 44013](https://www.ndbc.noaa.gov/station_history.php?station=44013), which is located about 11 miles offshore from Boston, MA. The specific question being asked is as follows: Can data from a single weather buoy provide evidence to support the conclusion that global warming is a real phenomenon?
 
 ## Approach
 
-  While there are several different approaches one could take to look for evidence of global warming or climate change, we chose to focus on air temperature as our outcome variable of interest. We are interested in analyzing air temperature patterns to determine whether there is a significant upward trend over the course of several years. Specifically, we chose to analyze the average air temperature for each month from 2000 to 2018. Our primary analysis consisted of running a series of 12 linear regressions--one for each month--with average monthly air temperature as the outcome variable and the year as the predictor. By observing the coefficients of the predictor for each fitted regression model, we were able to determine the general trend of the air temperature for each month over the course of 18 years, with a positive coefficient indicating a general rise in temperatures and a negative coefficient indicating a general fall in temperatures.
+While there are several different approaches one could take to look for evidence of global warming or climate change, we chose to focus on air temperature as our outcome variable of interest. We are interested in analyzing air temperature patterns to determine whether there is a significant upward trend over the course of several years. Specifically, we chose to analyze the average air temperature for each month from 2000 to 2018. Our primary analysis consisted of running a series of 12 linear regressions--one for each month--with average monthly air temperature as the outcome variable and the year as the predictor. We can confirm our findings on global warming by observing the coefficients of the predictor for each fitted regression model.
+
 
 ## Code Organization
 
@@ -24,23 +28,27 @@ The R code is organized into several chunks with comments for clarity. To start,
 The next goal is to create a single data frame containing the variables of interest for each of every year in the range. This is accomplished by creating a loop within a loop of code:
 
 * The inner loop: Contains the columns that specified years, months, and air temperatures to create one smaller dataset. It then filters out the NAs[^1] which is uncollected data.
-
 * The outer loop: Creates a new variable for average temperature (AvgTMP) by taking the mean of the air temperature (ATMP) for every month of every year within the set.
 
 Finally, a loop was added to run a series of linear regressions to analyze the change in average temperatures over time. For each month across every year in the range, plots of the data points with regression lines are created using ggplot2. This was the final step once a tidy data frame was created with only the outcome and predictor variables.
+
 
 [^1]: In the data, there were values with “NA” that designated an unknown or untracked value. This is because NOAA has the occasional lack of funding which leaves empty spaces in their data. So, we had to ignore those data points in our research.
 
 ## Conclusions
 
-Insert text here about conclusions 
+### Results
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
+By observing the coefficients of the predictor for each fitted regression model, we were able to determine the general trend of the air temperature for each month over the course of 18 years. Plots of the data and regression lines for each month are shown below. Overall, we observed a slight general rise in temperatures, with the average slope of the regression line equal to 0.028. 
+ 
+ 
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.height=6, fig.width=6, fig.cap="Plots of the linear regression line for each month from 2000 to 2018."}
 library(tidyverse)
 library(stringr)
 library(rstanarm)
 library(lubridate)
 library(gridExtra)
+library(kableExtra)
 
 url1 <- "http://www.ndbc.noaa.gov/view_text_file.php?filename=mlrf1h"
 url2 <- ".txt.gz&dir=data/historical/stdmet/"
@@ -53,6 +61,7 @@ urls <- str_c(url1, years, url2, sep = "")
 filenames <- str_c("mr", years, sep = "")
 month_files <- str_c("M", months, sep = "")
 plot_files <- str_c("P", months, sep = "")
+slope_files <- str_c("S", months, sep = "")
 
 N <- length(urls)
 M <- 12
@@ -61,9 +70,13 @@ for (j in 1:M){
 
   for (i in 1:N){
     suppressMessages(assign(filenames[i], read_table(urls[i], col_names = TRUE, na = "")))
+    
     file <- get(filenames[i])
+   
+  
     colnames(file)[1] <-"YYYY"
     
+  
     file %<>%
       select(YYYY, MM, ATMP) %>% 
       transform(YYYY=as.numeric(YYYY), MM=as.numeric(MM), ATMP=as.numeric(ATMP)) %>% 
@@ -87,15 +100,42 @@ for (j in 1:M){
 for (k in 1:12){
   file <- get(month_files[k])
   fit <- stan_glm(AvgTMP ~ YYYY, data = file, refresh=0)
+  assign(slope_files[k], as_tibble(round(coef(fit)[2], digits = 3)))
+  slopes <- get(slope_files[k])
+  if(k==1){
+    df <- slopes
+  }
+  else{
+    df <- rbind.data.frame(df, slopes)
+  }
   assign(plot_files[k], ggplot(file, aes(YYYY, AvgTMP)) + 
            geom_point() + 
            geom_abline(intercept = coef(fit)[1], slope = coef(fit)[2], color = "blue") +
            labs(x = "Year", y = "Average Temp", title = month.abb[k]) + 
            xlim(2000, 2018) + 
            ylim(15, 30))
+
 }
-grid.arrange(P01, P02, P03, P04, P05, P06, P07, P08, P09, P10, P11, P12, nrow=6, ncol=2, newpage = TRUE)
+
+grid.arrange(P01, P02, P03, P04, P05, P06, P07, P08, P09, P10, P11, P12, nrow=4, ncol=3, newpage = TRUE)
 ```
 
+
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+df <- mutate(df, Month = month.abb[1:12])
+colnames(df)[1] <- "Slope"
+df <- relocate(df, Month)
+df <- t(df)
+df <- as_tibble(df)
+rownames(df) <- c("Month", "Slope")
+kable(df, col.names = NULL, caption = "Slopes of the regression lines for every month from 2000 to 2018.") %>% kable_styling(position = "center")
+
+```
+
+\newpage
+
+### Discussion
+
+Insert text here about limitations, other analyses, etc. 
 
 
